# iskra-engine

./: .env.example  .gitignore  README.md  check-db.py  main.py  pyproject.toml
docs/: llama-cpp-python.md
scripts/: compare_gguf_embed_pair.py  emit_gguf_batch.py  llm_chat_loop.py  llm_chat_once.py  probe_vector_retrieval.py  rag_query_once.py  smoke_gguf_embed.py
sql/: 001_init.sql
src/iskra_engine/: __init__.py
src/iskra_engine/api/: __init__.py  app.py
src/iskra_engine/api/routers/: __init__.py  rag.py
src/iskra_engine/api/schemas/: __init__.py  rag.py
src/iskra_engine/db/: __init__.py  conn.py
src/iskra_engine/embeddings/: __init__.py  gguf_embed.py  gguf_llama_embedding.py
src/iskra_engine/llm/: __init__.py  client.py
src/iskra_engine/query/: query_engine.py
src/iskra_engine/retrieval/: __init__.py  pg_vector_retriever.py
tests/: test_api_routers_rag.py  test_db_conn.py  test_gguf_embed.py  test_llm_chat.py  test_pg_vector_retrieve.py  test_query_engine.py
